--- a/style.css
+++ b/style.css
@@ -1,8 +1,32 @@
+*{
+    box-sizing: border-box;
+}
 body {
     margin: 0;
 }
+a {
+    text-decoration: none;
+}
+
+.wrapper {
+    background-color: yellow;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+/*  */
+
+header {
+    background-color: red;
+    padding: 14px 0;
+}
+
+/* ********** */
+/* footer */
+/* ********** */
 footer {
-    background-color: grey;
+    background-color:lightgray;
     text-align: center;
     padding: 14px 0px;
 }
@@ -10,3 +34,5 @@ footer {
 footer p {
     margin: 0;
 }
+     
+       today I learned 
