--- a/style.css
+++ b/style.css
@@ -1,38 +1,160 @@
-*{
+/* ************ */
+/* common */
+/* ************ */
+* {
     box-sizing: border-box;
 }
 body {
     margin: 0;
 }
+main {
+    padding: 50px 0 20px 0;
+    min-height: calc(100vh - 104px);
+}
 a {
     text-decoration: none;
 }
-
+a:hover, button:hover {
+    opacity: .8;
+}
+img {
+    max-width: 100%;
+}
 .wrapper {
-    background-color: yellow;
+    /* background-color: yellow; */
     max-width: 800px;
     margin: 0 auto;
     padding: 0 20px;
 }
 
-/*  */
-
+/* ************ */
+/* header */
+/* ************ */
 header {
-    background-color: red;
+    background-color: lightgray;
     padding: 14px 0;
 }
-
-/* ********** */
-/* footer */
-/* ********** */
-footer {
-    background-color:lightgray;
-    text-align: center;
-    padding: 14px 0px;
+header .wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header .logo {
+    color: grey;
+    font-size: 24px;
+}
+header nav a {
+    color: grey;
+    margin-right: 20px;
+}
+header nav a.active {
+    color: rgb(59, 59, 59);
+    font-weight: bold;
+}
+header nav a:last-child {
+    margin-right: 0;
 }
 
+/* ************ */
+/* filters */
+/* ************ */
+/* .filters {
+    text-align: center;
+}
+.filters button {
+    margin-right: 15px;
+    border: none;
+    padding: 8px 10px;
+    background-color: lightgray;
+    cursor: pointer;
+}
+.filters button:last-child {
+    margin-right: 0;
+}
+.filters button.active {
+    background-color: rgb(51, 51, 51);
+    color: white;
+} */
+
+/* ************ */
+/* projects */
+/* ************ */
+.projects {
+    /* margin-top: 40px; */
+}
+.projects .wrapper {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+.projects .project {
+    width: calc(33.33% - 20px);
+    margin-bottom: 30px;
+    border: 1px solid grey;
+    margin: 10px;
+}
+.projects .project .thumbnail {
+    height: 150px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.projects .project .thumbnail.form {
+    background-image: url('form/thumbnail.png');
+}
+.projects .project .thumbnail.connect {
+    background-image: url('connect/thumbnail.png');
+}
+.projects .project .thumbnail.id-card {
+    background-image: url('id-card/thumbnail.png');
+}
+.projects .project .thumbnail.gallery {
+    background-image: url('gallery/thumbnail.png');
+}
+.projects .project .thumbnail.school-registration-form {
+    background-image: url('school-registration-form/thumbnail.png');
+}
+.projects .project .thumbnail.landing-page{
+    background-image: url('landing-page/thumbnail.png');
+}
+.projects .project .thumbnail.id-card-office{
+    background-image: url('id-card-office/thumbnail.png');
+}
+.projects .project .thumbnail.todo-list{
+    background-image: url('todo-list/thumbnail.png');
+}
+.projects .project .thumbnail.personal-blog{
+    background-image: url('personal-blog/thumbnail.png');
+}
+.projects .project .thumbnail.website{
+    background-image: url('website/thumbnail.png');
+}
+.projects .project .info {
+    display: flex;
+    border-top: 1px solid grey;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px;
+}
+.projects .project .info p {
+    margin: 0;
+}
+.projects .project .icons .github {
+    margin-right: 10px;
+}
+.projects .project .icons img {
+    width: 16px;
+}
+
+
+/* ************ */
+/* footer */
+/* ************ */
+footer {
+    background-color: lightgrey;
+    text-align: center; 
+    padding: 14px 0;
+}
 footer p {
     margin: 0;
 }
-     
-       today I learned 
