--- a/style.css
+++ b/style.css
@@ -105,6 +105,9 @@ header nav a:last-child {
 .projects .project .thumbnail.connect {
     background-image: url('connect/thumbnail.png');
 }
+.projects .project .thumbnail.profile-card {
+    background-image: url('profile-card/thumbnail.png');
+}
 .projects .project .thumbnail.id-card {
     background-image: url('id-card/thumbnail.png');
 }
