--- a/style.css
+++ b/style.css
@@ -132,6 +132,18 @@ header nav a:last-child {
 .projects .project .thumbnail.website{
     background-image: url('website/thumbnail.png');
 }
+.projects .project .thumbnail.clock{
+    background-image: url('clock/thumbnail.png');
+}
+.projects .project .thumbnail.todo{
+    background-image: url('todo/thumbnail.png');
+}
+.projects .project .thumbnail.ball-game{
+    background-image: url('ball-game/thumnail.png');
+}
+.projects .project .thumbnail.stopwatch{
+    background-image: url('stop-watch/thumbnail.png');
+}
 .projects .project .info {
     display: flex;
     border-top: 1px solid grey;
